<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abel.activitat1uf1.MainActivity"
    android:background="@android:color/background_light">

    <TextView
        android:text="@string/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textFecha"

        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textNombre"
        android:layout_toLeftOf="@+id/editNombre"
        android:layout_toStartOf="@+id/editNombre"
        android:layout_marginTop="52dp"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/editFecha"
        android:ems="10"
        android:id="@+id/editFecha"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/textFecha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/titulo"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_dark"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textNombre"

        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/background_dark" />

    <Button
        android:text="@string/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalcular"
        android:layout_below="@+id/textVicios"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editNombre"
        android:hint="@string/editNombre"
        android:layout_alignBaseline="@+id/textNombre"
        android:layout_alignBottom="@+id/textNombre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/textSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSexo"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignTop="@+id/spinner_sexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/spinner_sexo"
        android:entries="@array/sexo"
        android:layout_below="@+id/textFecha"
        android:layout_toRightOf="@+id/textVicios"
        android:layout_toEndOf="@+id/textVicios"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:text="@string/textVicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textVicios"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/spinner_sexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <CheckBox
        android:text="@string/cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb2"
        android:layout_alignBaseline="@+id/textVicios"
        android:layout_alignBottom="@+id/textVicios"
        android:layout_alignLeft="@+id/spinner_sexo"
        android:layout_alignStart="@+id/spinner_sexo"
        android:textColor="@android:color/black" />

    <CheckBox
        android:text="@string/cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb1"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/cb2"
        android:layout_alignBottom="@+id/cb2"
        android:layout_toRightOf="@+id/cb2"
        android:layout_toEndOf="@+id/cb2"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

    <CheckBox
        android:text="@string/cb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb3"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignBaseline="@+id/cb1"
        android:layout_alignBottom="@+id/cb1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
